--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "4.0.1",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "nuxt": "^4.1.3",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
