--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
     "nuxt": "^4.1.3",
+    "swiper": "^12.0.3",
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
