--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "typescript": "^5.6.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^25.1.0"
   }
 }
