feat: adding the frontend preview mode

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "4.0.1",
+    "@payloadcms/live-preview-vue": "^3.77.0",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
     "nuxt": "^4.1.3",
